# ads

./: Cargo.toml  README.md  plan.md  ralph.md  ralph.sh
.claude/: settings.json
.claude/hooks/: stop_exit.sh
feats/: arch.md  channel.md  logs.md  otel.md  procs.md
src/: channel.rs  config.rs  ipc.rs  main.rs  otel.rs  proc.rs
todos/: arch.md  channel.md  logs.md  procs.md
