[package]
name = "ads"
description = "agent-dev-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
command-group = { version = "5.0.1", features = ["with-tokio"] }
minijinja = "2.18.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "1.2.0", features = ["transport-io"] }
schemars = "1"
serde_json = "1.0.149"
toml = "1.1.0"
axum = "0.8"
opentelemetry-proto = { version = "0.31.0", default-features = false, features = ["gen-tonic-messages", "trace"] }
prost = "0.14"
